syntax = "proto3";

package chat;

import "google/protobuf/empty.proto";

option go_package = "/script";

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc StreamMessages(StreamMessagesRequest) returns (stream StreamMessagesResponse);
  rpc ListMessage(google.protobuf.Empty) returns (ListMessageResponse);
  rpc ListMessageBySender(ListMessageBySenderRequest) returns (ListMessageBySenderResponse);
}

message SendMessageRequest {
  int32 sender_id = 1;
  repeated int32 receiver_id = 2;
  string content = 4;
}

message SendMessageResponse {
  string status = 1;
}

message StreamMessagesRequest {
  string token = 1;
}

message StreamMessagesResponse {
  int32 sender_id = 1;
  string content = 3;
  string timestamp = 4;
}

message ListMessageResponse {
  repeated Message messages = 1;
}

message Message {
  string sender = 2;
  string message = 3;
}

message ListMessageBySenderRequest {
  int32 sender_id = 1;
}

message ListMessageBySenderResponse {
  string sender_name = 1;               
  repeated Messages messages = 2;      
}

message Messages {
  string message = 1;                 
}
